initial commit for time tracker service

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -53,6 +53,7 @@
 		<module>bonita-builder</module>
 		<module>bonita-theme</module>
 		<module>bonita-page</module>
+		<module>bonita-time-tracker</module>
 	</modules>
 	
 	<profiles>
