--- a/bpm/bonita-core/bonita-process-engine/pom.xml
+++ b/bpm/bonita-core/bonita-process-engine/pom.xml
@@ -3,11 +3,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<artifactId>bonita-core</artifactId>
-		<groupId>org.bonitasoft.engine.core</groupId>
-		<version>6.3.0-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <artifactId>bonita-core</artifactId>
+        <groupId>org.bonitasoft.engine.core</groupId>
+        <version>6.3.0-SNAPSHOT</version>
+    </parent>
 
     <artifactId>bonita-process-engine</artifactId>
 
@@ -18,6 +18,11 @@
         <dependency>
             <groupId>org.bonitasoft.engine.core</groupId>
             <artifactId>bonita-home-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bonitasoft.engine</groupId>
+            <artifactId>bonita-time-tracker</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -264,15 +269,15 @@
         </dependency>
 
         <dependency>
-        	<groupId>org.apache.commons</groupId>
-        	<artifactId>commons-lang3</artifactId>
-        	<version>3.2.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2.1</version>
         </dependency>
         <dependency>
-        	<groupId>org.bonitasoft.engine.identity</groupId>
-        	<artifactId>bonita-identity-model-impl</artifactId>
-        	<version>${project.version}</version>
-        	<scope>test</scope>
+            <groupId>org.bonitasoft.engine.identity</groupId>
+            <artifactId>bonita-identity-model-impl</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
