--- a/services/bonita-connector-executor/bonita-connector-executor-api-impl/pom.xml
+++ b/services/bonita-connector-executor/bonita-connector-executor-api-impl/pom.xml
@@ -33,5 +33,10 @@
 			<artifactId>bonita-log-technical-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.bonitasoft.engine</groupId>
+		    <artifactId>bonita-time-tracker</artifactId>
+		    <version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
