BS-9038 - deploy bonita-commons (required by bontia-home-sp) within the deploy profile

--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,7 @@
 			<id>deploy</id>
 			<modules>
 				<module>bpm</module>
+				<module>services</module>
 			</modules>
 			<build>
 				<plugins>
