--- a/bpm/bonita-core/bonita-process-engine/pom.xml
+++ b/bpm/bonita-core/bonita-process-engine/pom.xml
@@ -217,6 +217,11 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>1.5.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
