add authorization maven module and sql script to manage authorization database resources

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -53,6 +53,8 @@
 		<module>bonita-theme</module>
 		<module>bonita-page</module>
 		<module>bonita-time-tracker</module>
+		
+		<module>bonita-authorization</module>
 	</modules>
 	
 	<profiles>
