--- a/bpm/bonita-server/pom.xml
+++ b/bpm/bonita-server/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>bonita-authentication-api-impl</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<!-- Authorization -->
+		<dependency>
+			<groupId>org.bonitasoft.engine.authorization</groupId>
+			<artifactId>bonita-authorization</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- Cache -->
 		<dependency>
@@ -537,6 +544,8 @@
 									<!-- Authentication -->
 									<include>org.bonitasoft.engine.authentication:bonita-authentication-api</include>
 									<include>org.bonitasoft.engine.authentication:bonita-authentication-api-impl</include>
+									<!-- Authorization -->
+									<include>org.bonitasoft.engine.authorization:bonita-authorization</include>
 									<!-- Cache -->
 									<include>org.bonitasoft.engine.cache:bonita-cache-api</include>
 									<include>org.bonitasoft.engine.cache:bonita-cache-ehcache</include>
