add publishArtifacts property to deactivate profile 'package' while deploying artifacts to public Maven repo

--- a/bpm/bonita-bpm-integration-tests/pom.xml
+++ b/bpm/bonita-bpm-integration-tests/pom.xml
@@ -70,9 +70,11 @@
 
 		<profile>
 			<id>package</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+            <activation>
+                <property>
+                    <name>!publishArtifacts</name>
+                </property>
+            </activation>
 			<modules>
 				<module>bonita-query-tests</module>
 			</modules>
