--- a/bpm/pom.xml
+++ b/bpm/pom.xml
@@ -62,9 +62,11 @@
 		</profile>
 		<profile>
 			<id>package</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+            <activation>
+                <property>
+                    <name>!publishArtifacts</name>
+                </property>
+            </activation>
 			<modules>
 				<module>bonita-common</module>
 				<module>bonita-client</module>
