--- a/pom.xml
+++ b/pom.xml
@@ -418,9 +418,11 @@
 		</profile>
 		<profile>
 			<id>package</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+            <activation>
+                <property>
+                    <name>!publishArtifacts</name>
+                </property>
+            </activation>
 			<modules>
 				<module>services</module>
 				<module>bpm</module>
