--- a/bpm/bonita-core/bonita-actor-mapping/bonita-actor-mapping-impl/pom.xml
+++ b/bpm/bonita-core/bonita-actor-mapping/bonita-actor-mapping-impl/pom.xml
@@ -62,7 +62,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bonitasoft.engine.recorder</groupId>
-			<artifactId>bonita-recorder-model</artifactId>
+			<artifactId>bonita-recorder-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<!-- Tests -->
