--- a/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/mysql/database.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/mysql/database.properties
@@ -7,3 +7,7 @@ db.database.name = journal
 db.url = jdbc:mysql://${db.server.name}:${db.server.port}/${db.database.name}?dontTrackOpenResources=true&amp;useUnicode=true&amp;characterEncoding=UTF-8
 db.user = bonita
 db.password = bpm
+
+ds.properties = xaProperties.user="${db.user}" \
+				xaProperties.password="${db.password}" \
+				xaProperties.URL="${db.url}"
