--- a/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/oracle/database.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/oracle/database.properties
@@ -7,3 +7,7 @@ db.database.name = XE
 db.url = jdbc:oracle:thin:@${db.server.name}:${db.server.port}:${db.database.name}
 db.user = bonita
 db.password = bpm
+
+ds.properties = xaProperties.user="${db.user}" \
+				xaProperties.password="${db.password}" \
+				xaProperties.URL="${db.url}"
