--- a/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/sqlserver/database.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/sqlserver/database.properties
@@ -7,3 +7,7 @@ db.database.name = journal
 db.url = jdbc:sqlserver://${db.server.name}:${db.server.port};database=${db.database.name}
 db.user = bonita
 db.password = bpm
+
+ds.properties = xaProperties.user="${db.user}" \
+				xaProperties.password="${db.password}" \
+				xaProperties.URL="${db.url}"
