BS-9918 : Replace Bitronix by Atomikos in Tomcat bundle
- Modify conf of the datasource to works with all databases in bonita-integration-tomcat7

--- a/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat7/pom.xml
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat7/pom.xml
@@ -249,6 +249,8 @@
 										<property file="tomcat/${db.vendor}/database.properties" />
 
 										<replace file="${tomcat.conf.dir}/Catalina/localhost/bonita.xml"
+											token="#ds.properties#" value="${ds.properties}" />
+										<replace file="${tomcat.conf.dir}/Catalina/localhost/bonita.xml"
 											token="#db.datasource.class#" value="${db.datasource.class}" />
 										<replace file="${tomcat.conf.dir}/Catalina/localhost/bonita.xml"
 											token="#db.driver.class#" value="${db.driver.class}" />
