--- a/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat7/tomcat/h2/database.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat7/tomcat/h2/database.properties
@@ -7,3 +7,7 @@ db.database.name = journal.db
 db.url = jdbc:h2:tcp://${db.server.name}:${db.server.port}/${db.database.name};MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE;IGNORECASE=TRUE;
 db.user = sa
 db.password = 
+
+ds.properties = xaProperties.user="${db.user}" \
+				xaProperties.password="${db.password}" \
+				xaProperties.URL="${db.url}"
