change default jta platform on integration tests

--- a/bpm/bonita-bpm-integration-tests/bonita-bpm-services-integration-tests/home/server/platform/conf/bonita-platform.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-bpm-services-integration-tests/home/server/platform/conf/bonita-platform.properties
@@ -15,7 +15,7 @@ database.sequence.manager.datasource.name=java:comp/env/bonitaSequenceManagerDS
 transaction.manager=${sysprop.bonita.transaction.manager:java:comp/UserTransaction}
 userTransaction=${sysprop.bonita.userTransaction:java:comp/UserTransaction}
 # jta.transaction.manager.name=java:comp/UserTransaction
-hibernate.transaction.jta_platform = ${sysprop.bonita.hibernate.transaction.jta_platform:org.bonitasoft.engine.persistence.JNDIBitronixJtaPlatform}
+hibernate.transaction.jta_platform = ${sysprop.bonita.hibernate.transaction.jta_platform:org.bonitasoft.engine.persistence.Atomikos3HibernateJtaPlatform}
 
 # Try to inherit the property from the System properties -->
 db.vendor=${sysprop.bonita.db.vendor:h2}
