--- a/bpm/bonita-bpm-integration-tests/bonita-integration-local-tests/src/test/resources/jdbc-mysql.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-local-tests/src/test/resources/jdbc-mysql.properties
@@ -7,5 +7,5 @@ db.server.name=localhost
 db.server.port=3306
 db.database.name=bonita
 db.url=jdbc:mysql://${db.server.name}:${db.server.port}/${db.database.name}?useUnicode=true&characterEncoding=UTF-8&pinGlobalTxToPhysicalConnection=true
-db.user=bonita
-db.password=bonita
+db.user=root
+db.password=root
