--- a/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/mysql/database.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-as-tests/bonita-integration-tomcat6/tomcat/mysql/database.properties
@@ -4,7 +4,7 @@ db.driver.class = com.mysql.jdbc.Driver
 db.server.name = localhost
 db.server.port = 3306
 db.database.name = journal
-db.url = jdbc:mysql://${db.server.name}:${db.server.port}/${db.database.name}?dontTrackOpenResources=true&amp;useUnicode=true&amp;characterEncoding=UTF-8
+db.url = jdbc:mysql://${db.server.name}:${db.server.port}/${db.database.name}?dontTrackOpenResources=true&amp;useUnicode=true&amp;characterEncoding=UTF-8&pinGlobalTxToPhysicalConnection=true
 db.user = bonita
 db.password = bpm
 
