--- a/bpm/bonita-bpm-integration-tests/bonita-integration-local-tests/src/test/resources/jdbc-oracle.properties
+++ b/bpm/bonita-bpm-integration-tests/bonita-integration-local-tests/src/test/resources/jdbc-oracle.properties
@@ -7,5 +7,5 @@ db.server.name=192.168.4.61
 db.server.port=1521
 db.instance.name=orcl
 db.url=jdbc:oracle:thin:@${db.server.name}:${db.server.port}:${db.instance.name}
-db.user=bonita
-db.password=bonita
+db.user=bos_ju
+db.password=bos_ju
