BS-10632, Have tomcat 7 Engine tests run with Atomikos

--- a/bonita-integration-tests/bonita-test-utils/bonita-server-test-utils/src/test/resources/conf/bonita-platform.properties
+++ b/bonita-integration-tests/bonita-test-utils/bonita-server-test-utils/src/test/resources/conf/bonita-platform.properties
@@ -31,5 +31,5 @@ org.bonitasoft.engine.cron=0/5 * * * * ?
 document.servlet.url=downloadDocument
 
 hibernate.transaction.jta_platform = ${sysprop.bonita.hibernate.transaction.jta_platform:org.bonitasoft.engine.persistence.JNDIAtomikosJtaPlatform}
-transaction.manager=${sysprop.bonita.transaction.manager:java:comp/UserTransaction}
+transaction.manager=${sysprop.bonita.transaction.manager:java:comp/env/TransactionManager}
 userTransaction=${sysprop.bonita.userTransaction:java:comp/UserTransaction}
