--- a/bpm/bonita-home/base/server/platform/conf/bonita-platform.properties
+++ b/bpm/bonita-home/base/server/platform/conf/bonita-platform.properties
@@ -31,7 +31,7 @@ org.bonitasoft.engine.archive.newestTime=9999999999999
 document.servlet.url=downloadDocument
 
 hibernate.transaction.jta_platform = ${sysprop.bonita.hibernate.transaction.jta_platform:org.bonitasoft.engine.persistence.JNDIAtomikosJtaPlatform}
-transaction.manager=${sysprop.bonita.transaction.manager:java:comp/UserTransaction}
+transaction.manager=${sysprop.bonita.transaction.manager:java:comp/env/TransactionManager}
 userTransaction=${sysprop.bonita.userTransaction:java:comp/UserTransaction}
 
 # If platform is not already created and initialized (The 'platform' table exists in the database) and
