--- a/bonita-integration-tests/bonita-integration-tests-services-bpm/src/test/resources/transactions.properties
+++ b/bonita-integration-tests/bonita-integration-tests-services-bpm/src/test/resources/transactions.properties
@@ -20,7 +20,7 @@ com.atomikos.icatch.output_dir = ./target
 #com.atomikos.icatch.console_log_level=WARN
 
 #Set the max timeout (in milliseconds) for local transactions
-#com.atomikos.icatch.max_timeout = 1000
+com.atomikos.icatch.max_timeout = 10000000
 
 #Do we want to use parallel subtransactions? JTA's default is NO for J2EE compatibility.
 #com.atomikos.icatch.serial_jta_transactions=true
@@ -33,7 +33,7 @@ com.atomikos.icatch.output_dir = ./target
 
 
 #The default timeout for JTA transactions (optional, defaults to 10000 ms) 
-#com.atomikos.icatch.default_jta_timeout=300000
+com.atomikos.icatch.default_jta_timeout=3000000
 
 #Set name of file where messages are output
 #com.atomikos.icatch.console_file_name = tm.out
