--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -48,69 +49,46 @@
 	</scm>
 
 	<properties>
-		<slf4j.version>1.6.1</slf4j.version>
 		<httpclient.version>4.2.5</httpclient.version>
 		<xstream.version>1.4.2</xstream.version>
 		<hibernate.version>4.2.13.Final</hibernate.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring.version>3.1.2.RELEASE</spring.version>
-
-		<!-- Tests -->
-		<powermock.version>1.5.1</powermock.version>
 
 		<!-- ************************ -->
 		<!-- Sonar/Reporting settings -->
 		<!-- ************************ -->
-		<!-- Sonar/Jacoco integration. Note that these properties need to be defined outside the "coverage" profile because we want to be to able to execute mvn sonar:sonar 
-			without passing a profile -->
+		<!-- Sonar/Jacoco integration. Note that these properties need to be defined 
+			outside the "coverage" profile because we want to be to able to execute mvn 
+			sonar:sonar without passing a profile -->
 		<!-- Tells Sonar to use jacoco for coverage results -->
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<!-- Jacoco version to use -->
 		<jacoco.version>0.6.4.201312101107</jacoco.version>
-		<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per test -->
-		<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
 		<!-- Don't let Sonar execute tests. We will ask it to Maven -->
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<!-- Report output directory, in Jenkins use: -Djacoco.outputDir=${WORKSPACE} -->
 		<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
 		<!-- Jacoco output file for UTs -->
 		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-		<!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
+		<!-- Tells Sonar where the Jacoco coverage result file is located for Unit 
+			Tests -->
 		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
 		<!-- Jacoco output file for ITs -->
 		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
 		<!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
 		<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
-        <sonar.exclusions>**/*BuilderImpl.java,**/*FactoryImpl.java</sonar.exclusions>
+		<sonar.exclusions>**/*BuilderImpl.java,**/*FactoryImpl.java</sonar.exclusions>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>commons-codec</groupId>
-				<artifactId>commons-codec</artifactId>
-				<version>1.7</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.h2database</groupId>
-				<artifactId>h2</artifactId>
-				<version>1.3.175</version>
-			</dependency>
-			<dependency>
-				<groupId>net.sf.ehcache</groupId>
-				<artifactId>ehcache-core</artifactId>
-				<version>2.4.7</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
-				<version>${spring.version}</version>
+				<groupId>org.bonitasoft</groupId>
+				<artifactId>bonita-bom-component</artifactId>
+				<version>${project.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -122,67 +100,6 @@
 						<artifactId>jboss-transaction-api_1.1_spec</artifactId>
 					</exclusion>
 				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>2.1</version>
-			</dependency>
-			<dependency>
-	            <groupId>org.apache.commons</groupId>
-	            <artifactId>commons-lang3</artifactId>
-	            <version>3.1</version>
-	        </dependency>
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-collections4</artifactId>
-				<version>4.0</version>
-			</dependency>
-			<!-- Tests -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.11</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.assertj</groupId>
-				<artifactId>assertj-core</artifactId>
-				<version>1.5.0</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
-				<version>1.9.5</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-module-junit4</artifactId>
-				<version>${powermock.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-api-mockito</artifactId>
-				<version>${powermock.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>1.0.11</version>
-			</dependency>
-			<dependency>
-				<groupId>org.codehaus.btm</groupId>
-				<artifactId>btm</artifactId>
-				<version>2.1.4</version>
-			</dependency>
-			<dependency>
-				<groupId>org.codehaus.btm</groupId>
-				<artifactId>btm-tomcat55-lifecycle</artifactId>
-				<version>2.1.4</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -521,7 +438,8 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
-							<!-- Be aware not to omit ${jacoco.agent.it.arg} if overriding this property in lower-level pom files: -->
+							<!-- Be aware not to omit ${jacoco.agent.it.arg} if overriding this 
+								property in lower-level pom files: -->
 							<argLine>-Xmx1024m -XX:MaxPermSize=256m
 								-XX:+HeapDumpOnOutOfMemoryError ${jacoco.agent.it.arg}</argLine>
 							<!-- Listener to show coverage for each test -->
@@ -543,13 +461,14 @@
 							<includes>
 								<include>org.bonitasoft.engine.*</include>
 							</includes>
-                            <excludes>
-                                <excludes>**/*BuilderImpl.java</excludes>
-                                <excludes>**/*FactoryImpl.java</excludes>
-                            </excludes>
+							<excludes>
+								<excludes>**/*BuilderImpl.java</excludes>
+								<excludes>**/*FactoryImpl.java</excludes>
+							</excludes>
 						</configuration>
 						<executions>
-							<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info to be passed to the JVM hosting the code being tested. -->
+							<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
+								to be passed to the JVM hosting the code being tested. -->
 							<execution>
 								<id>prepare-ut-agent</id>
 								<phase>process-test-classes</phase>
@@ -562,7 +481,8 @@
 									<append>true</append>
 								</configuration>
 							</execution>
-							<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info to be passed to the JVM hosting the code being tested. -->
+							<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
+								to be passed to the JVM hosting the code being tested. -->
 							<execution>
 								<id>prepare-it-agent</id>
 								<phase>pre-integration-test</phase>
@@ -583,8 +503,6 @@
 				<dependency>
 					<groupId>org.codehaus.sonar-plugins.java</groupId>
 					<artifactId>sonar-jacoco-listeners</artifactId>
-					<version>${sonar-jacoco-listeners.version}</version>
-					<scope>test</scope>
 				</dependency>
 			</dependencies>
 		</profile>
